search btn function

--- a/src/components/RecipesList/RecipesList.scss
+++ b/src/components/RecipesList/RecipesList.scss
@@ -77,6 +77,11 @@
             border-radius: 8px;
         }
     }
-
+    .noRecipes {
+        font-size:20px;
+        text-align: center;
+        color: rgb(242, 85, 85);
+        padding: 50px;
+    }
 
 }
