--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -10,7 +10,22 @@
         font-weight: bold;
         margin-bottom: 6px;
     }
-
+    .rightSection{
+        display: flex;
+        gap: 20px;
+        align-items: flex-start;
+        justify-content: center;
+         
+        .close {
+            border: none;
+            color: white;
+            background: red;
+            padding: 10px 15px;
+            border-radius: 50px;
+            cursor: pointer;
+            font-weight: bold;
+    }
+    }
 }
 
 @media (min-width:760px){
