--- a/src/components/RecipesList/RecipesList.scss
+++ b/src/components/RecipesList/RecipesList.scss
@@ -1,13 +1,28 @@
 .recipeList {
 
+    .recipeHeader {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 25px;
+        .title {
+            font-size: 20px;
+            font-weight: bold;
+            margin-bottom: 10px;
+            text-align: center;
+            color: #082729;
+        }
 
-    .title {
-        font-size: 20px;
-        font-weight: bold;
-        margin-bottom: 10px;
-        text-align: center;
-        color: #082729;
+        select {
+            outline: none;
+            border: 1px solid #ccc;
+            padding: 5px 10px;
+            border-radius: 10px;
+            margin-top: 10px;
+        }
+
     }
+
     .list {
         display: flex;
         flex-wrap: wrap;
